# usaco

./: CMakeLists.txt  LICENSE  template.cpp
src/: 01_shell.cpp  02_mixmilk.cpp  03_cowsignal.cpp  04_speeding.cpp
